# aiida-hydrogen-restorer

./: .gitignore  README.md  find_max_peaks.py  pyproject.toml
src/aiida_hydrogen_restorer/: __init__.py
src/aiida_hydrogen_restorer/calculations/: add_hydrogens_to_structure.py  create_dict.py  pynball.py
src/aiida_hydrogen_restorer/parsers/: pynball.py
src/aiida_hydrogen_restorer/workflows/: restore_hydrogen.py  restore_hydrogen_pinball.py  restore_hydrogen_simpler.py  restore_missing_hydrogen.py  restore_pietro.py
